--- a/ControllerProgrammer.Main/Views/MainWindow.xaml
+++ b/ControllerProgrammer.Main/Views/MainWindow.xaml
@@ -2,11 +2,11 @@
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:common="clr-namespace:ControllerProgrammer.Interfaces.Constants;assembly=ControllerProgrammer.Interfaces"
+        xmlns:common="clr-namespace:ControllerProgrammer.Common.Constants;assembly=ControllerProgrammer.Common"
         xmlns:prism="http://prismlibrary.com/"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525" >
+        Title="Controller Programmer" Height="470" Width="800" ResizeMode="NoResize">
     <Grid>
         <ContentControl prism:RegionManager.RegionName="{x:Static common:Regions.ProgramRegion}" />
     </Grid>
