--- a/ControllerProgrammer.Main/Views/MainWindow.xaml
+++ b/ControllerProgrammer.Main/Views/MainWindow.xaml
@@ -1,13 +1,16 @@
-﻿<mah:MetroWindow x:Class="ControllerProgrammer.Main.Views.MainWindow"
-        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+﻿<dx:ThemedWindow x:Class="ControllerProgrammer.Main.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:common="clr-namespace:ControllerProgrammer.Common.Constants;assembly=ControllerProgrammer.Common"
+        xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+        xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+        xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+        xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns:prism="http://prismlibrary.com/"
-        GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="Controller Programmer" Height="470" Width="800" ResizeMode="CanResize">
+        Title="Controller Programmer" Height="700" Width="800" ResizeMode="CanResize">
     <Grid>
         <ContentControl prism:RegionManager.RegionName="{x:Static common:Regions.ProgramRegion}" />
     </Grid>
-</mah:MetroWindow>
+</dx:ThemedWindow>
