--- a/ControllerProgrammer.ProgramForm/Views/DataInputView.xaml
+++ b/ControllerProgrammer.ProgramForm/Views/DataInputView.xaml
@@ -3,9 +3,130 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:common="clr-namespace:ControllerProgrammer.Common.Constants;assembly=ControllerProgrammer.Common"
              xmlns:local="clr-namespace:ControllerProgrammer.ProgramForm.Views"             
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ControllerProgrammer.Common;component/Resources/CommonStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <dxmvvm:Interaction.Behaviors>
+        <dxmvvm:DispatcherService x:Name="DensityTableDispatcher" />
+        <dx:DXMessageBoxService x:Name="DensityTableMessageService"/>
+        <dxmvvm:EventToCommand EventName="Loaded"
+                               Command="{Binding LoadedCommand}" />
+    </dxmvvm:Interaction.Behaviors>
+    <dx:LoadingDecorator>
+        <dxlc:DockLayoutControl>
+            <dxlc:GroupBox Header="Power Density Table" dxlc:DockLayoutControl.Dock="Client">
+                <dxg:GridControl x:Name="_led1PowerDensities"
+                                 AllowUpdateTwoWayBoundPropertiesOnSynchronization="True"
+                                 ItemsSource="{Binding PowerDensities, Mode=TwoWay}"
+                                 SelectedItem="{Binding CurrentPowerDensity, Mode=TwoWay}"
+                                 ShowLoadingPanel="{Binding ShowPowerDensityLoading, Mode=TwoWay}"
+                                 DefaultSorting="Current DESC"
+                                 SelectionMode="Row"
+                                 Style="{StaticResource GridControlStyle}">
+                    <dxg:GridControl.View>
+                        <dxg:TableView x:Name="tTableView"
+                                       HorizontalScrollbarVisibility="Visible"
+                                       ShowSearchPanelMode="Never"
+                                       AllowEditing="True"
+                                       
+                                       EditFormShowMode="Inline"
+                                       Style="{StaticResource TableViewStyleNoMaster}">
+                            <dxg:TableView.EditFormTemplate>
+                                <DataTemplate>
+                                    <GroupBox Header="Edit Form">
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition />
+                                                <RowDefinition />
+                                                <RowDefinition />
+                                                <RowDefinition />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="0.3*" />
+                                                <ColumnDefinition />
+                                            </Grid.ColumnDefinitions>
+                                            <TextBlock Text="Current: " Grid.Row="0" Grid.Column="0" />
+                                            <dxg:EditFormEditor FieldName="Current" Grid.Row="0" Grid.Column="1" Margin="2" />
+                                            <TextBlock Text="Power Density: " Grid.Row="1" Grid.Column="0" />
+                                            <dxg:EditFormEditor FieldName="PowerDenisty" Grid.Row="1" Grid.Column="1" Margin="2" />
+                                            <StackPanel  Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
+                                                <dx:SimpleButton Content="Apply" Command="{Binding Path=Source.View.DataContext.CommitCommand}" Margin="2"/>
+                                                <dx:SimpleButton Content="Cancel" Command="{Binding Path=Source.View.DataContext.CancelEditCommand}" Margin="2"/>
+                                            </StackPanel>
+                                        </Grid>
+                                    </GroupBox>
+                                </DataTemplate>
+                            </dxg:TableView.EditFormTemplate>
+                        </dxg:TableView>
+                    </dxg:GridControl.View>
+                    <dxg:GridColumn Header="Id" FieldName="PowerDensityId"/>
+                    <dxg:GridColumn FieldName="LedId"/>
+                    <dxg:GridColumn Header="Wavelength(nm)" FieldName="Led.Wavelength" GroupIndex="0" AllowGrouping="True"/>
+                    <dxg:GridColumn Header="Current(mA)" FieldName="Current">
+                        <dxg:GridColumn.EditSettings>
+                            <dxe:TextEditSettings MaskType="Numeric"
+                                                          MaskUseAsDisplayFormat="True"
+                                                          Mask="d" />
+                        </dxg:GridColumn.EditSettings>
+                        <dxg:GridColumn.EditFormTemplate>
+                            <DataTemplate>
+                                <dxe:SpinEdit Name="PART_Editor" Mask="d" MaskType="Numeric"/>
+                            </DataTemplate>
+                        </dxg:GridColumn.EditFormTemplate>
+                    </dxg:GridColumn>
+                    <dxg:GridColumn Header="Power Density(mW/cm^2)" FieldName="PowerDenisty">
+                        <dxg:GridColumn.EditSettings>
+                            <dxe:TextEditSettings MaskType="Numeric"
+                                                  MaskUseAsDisplayFormat="True"
+                                                  Mask="d" />
+                        </dxg:GridColumn.EditSettings>
+                        <dxg:GridColumn.EditFormTemplate>
+                            <DataTemplate>
+                                <dxe:SpinEdit Name="PART_Editor" Mask="d" MaskType="Numeric"/>
+                            </DataTemplate>
+                        </dxg:GridColumn.EditFormTemplate>
+                    </dxg:GridColumn>
+                </dxg:GridControl>
+            </dxlc:GroupBox>
+            <!--<dxlc:LayoutGroup dxlc:DockLayoutControl.Dock="Bottom"
+                             Header="Program Controller">
+                <dxlc:GroupBox DisplayMode="Light" >
+                    <dxlc:GroupBox.HeaderTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="Save Changes?" HorizontalAlignment="Center"/>
+                        </DataTemplate>
+                    </dxlc:GroupBox.HeaderTemplate>
+                    <dxlc:LayoutGroup HorizontalAlignment="Center">
+                        <dx:SimpleButton Height="50" Width="300"
+                                         Command="{Binding SaveCommand}"
+                                         Content="Save Table Changes"
+                                         IsEnabled="{Binding ControllerConnected}"
+                                         Glyph="{dx:DXImage Image=Save_32x32.png}" />
+                        <dx:SimpleButton Height="50" Width="300"
+                                         Command="{Binding CancelCommand}"
+                                         Content="Undo Table Changes"
+                                         Glyph="{dx:DXImage Image=Close_32x32.png}" />
+                    </dxlc:LayoutGroup>
+                </dxlc:GroupBox>
+            </dxlc:LayoutGroup>-->
+        </dxlc:DockLayoutControl>
+    </dx:LoadingDecorator>
 </UserControl>
