--- a/ControllerProgrammer.ProgramForm/Views/ProgramFormView.xaml
+++ b/ControllerProgrammer.ProgramForm/Views/ProgramFormView.xaml
@@ -5,26 +5,59 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ControllerProgrammer.ProgramForm.Views"
              xmlns:common="clr-namespace:ControllerProgrammer.Common.Constants;assembly=ControllerProgrammer.Common"
-             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Loaded">
-            <prism:InvokeCommandAction Command="{Binding LoadedCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
-    <DockPanel>
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/ControllerProgrammer.Common;component/Resources/CommonStyles.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</UserControl.Resources>
+    
+    <dxmvvm:Interaction.Behaviors>
+        <dxmvvm:DispatcherService x:Name="DispatcherService" />
+        <dx:DXMessageBoxService x:Name="MessageService"/>
+        <dxmvvm:EventToCommand EventName="Loaded"
+                               Command="{Binding InitializeCommand}" />
+    </dxmvvm:Interaction.Behaviors>
+    <dx:LoadingDecorator>
+        <dxlc:DockLayoutControl HorizontalAlignment="Stretch">
+            <dxlc:LayoutGroup Orientation="Horizontal" dxlc:DockLayoutControl.Dock="Top">
+                <dx:SimpleButton Height="50"
+                             Command="{Binding ConnectCommand}"
+                             Content="{Binding ConnectButtonText}"
+                             Glyph="{dx:DXImage Image=Add_16x16.png}" />
+                <dxlc:LayoutItem Label="Connection Status" VerticalAlignment="Stretch" Style="{StaticResource LayoutItemStyle}">
+                    <dxe:TextEdit Text="{Binding ConnectionStatus}" IsReadOnly="False"/>
+                </dxlc:LayoutItem>
+            </dxlc:LayoutGroup>
 
-        <mah:MetroTabControl DockPanel.Dock="Bottom">
-            <mah:MetroTabItem Header="Recipe Form">
-                <mah:ContentControlEx prism:RegionManager.RegionName="{x:Static common:Regions.RecipeRegion}"/>
-            </mah:MetroTabItem>
-            <mah:MetroTabItem Header="Data Input Form">
-                <mah:ContentControlEx prism:RegionManager.RegionName="{x:Static common:Regions.DataInputRegion}"/>
-            </mah:MetroTabItem>
-        </mah:MetroTabControl>
-    </DockPanel>
+            <dx:DXTabControl dxlc:DockLayoutControl.Dock="Client">
+                <dx:DXTabItem prism:RegionManager.RegionName="{x:Static common:Regions.RecipeRegion}"
+                              Glyph="{dx:DXImage Image=Save_16x16.png}"
+                              Header="Recipe Programmer"
+                              TabIndex="0"/>
+                <dx:DXTabItem prism:RegionManager.RegionName="{x:Static common:Regions.DataInputRegion}"
+                              Glyph="{dx:DXImage Image=HistoryItem_16x16.png}"
+                              Header="Log Viewer"
+                              TabIndex="0"/>
+                <!--<dx:DXTabItem prism:RegionManager.RegionName="{x:Static common:Regions.RecipeRegion}"
+                              Glyph="{dx:DXImage Image=HistoryItem_16x16.png}"
+                              Header="Log Viewer"
+                              TabIndex="0"/>-->
+            </dx:DXTabControl>
+        </dxlc:DockLayoutControl>
+    </dx:LoadingDecorator>
+
 </UserControl>
